--- a/style.css
+++ b/style.css
@@ -356,7 +356,20 @@ html {
     align-items: center;
     opacity: 0;
 }
-
+.modal-containerj8 {
+    position: fixed;
+    visibility: hidden;
+    z-index: 1000;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+}
 
 
 .cta {
@@ -401,7 +414,16 @@ html {
     color: #283773;
     background: #fff;
 }
-
+.ctaj8 {
+    display: inline-block;
+    padding: 0%;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    text-decoration: none;
+    color: #283773;
+    background: #fff;
+}
 .close {
     color: rgb(3, 3, 3);
     background-color: #fff;
@@ -431,7 +453,13 @@ html {
     font-size: 28px;
     font-weight: bold;
 }
-
+.closej8 {
+    color: rgb(3, 3, 3);
+    background-color: #fff;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
 .mark2 {
     padding-top: 3%;
     width: 20%;
